implement get image and get times
